--- a/core/jdc-m-active.scss
+++ b/core/jdc-m-active.scss
@@ -5,14 +5,26 @@
 @import "../core/mixin";
 @import "../core/media-queries";
 
+$baseFontSize: 14px;
+html {
+	font-size: $baseFontSize;
+}
+@include min-screen(640px) {
+	html {
+		font-size: $baseFontSize * 2;
+	}
+}
+@include screen(480px, 640px) {
+	html {
+		font-size: $baseFontSize * 1.5;
+	}
+}
 
-// 活动用了一个建议的reset
+// 活动用了一个简易的的reset
 *{margin:0;padding:0}
 body{
 	line-height: $baseLineHeight;
-	font-size: $baseFontSize;
 	color: $baseFontColor;
-	margin: 0 auto;
 	background-color:$baseBgColor;
 	font-family: $fontMobile;
 }
@@ -29,7 +41,6 @@ header,footer,section {display:block;}
 // 针对移动版的配置
 $isIe67:            false;
 $isFilter:          false;
-
 $prefixForMozilla:      false;
 $prefixForMicrosoft:    false;
 $prefixForOpera:        false;
@@ -41,3 +52,22 @@ $prefixForOpera:        false;
 //$baseFontColor: #333;
 //$baseBgColor: $white;
 //$linkColor: $navy;
+
+
+//  预定义样式
+.shh5-wrap {
+	width: 100%;
+	img {
+		vertical-align: top;
+	}
+}
+.shh5-wrap-in{
+	position: relative;	
+	@include fix;
+}
+@function pxToPrcent($num, $base: 640px) {
+	@return ($num / $base) * 100%;
+}
+@function pxToRem($px) {
+  @return $px / $baseFontSize * 1rem;
+}
