--- a/_jdc-m-active.scss
+++ b/_jdc-m-active.scss
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 
 @import "../core/config";
-@import "../core/css3";
-@import "../core/mixin";
-@import "../core/media-queries";
+@import "core/_css3";
+@import "core/_mixin";
+@import "core/_media-queries";
 
 $baseFontSize: 14px;
 html {
